# nix-bazel

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  WORKSPACE  flake.nix
test/: BUILD  test.cc
test/lib/: BUILD  lib.cc  lib.h  ut.cc
test/proto/: BUILD
